src/objects/Customer_Need_Analysis__c.object
<CustomObject>
    <description>Customer Need Analysis</description>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <description>Actual Revenue</description>
        <inlineHelpText>Actual Revenue</inlineHelpText>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Opportunity__c</fullName>
        <label>Future Opportunity?</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name_X__c</fullName>
        <label>Product Name</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Customer Need Analysis</relationshipLabel>
        <relationshipName>Customer_Need_Analysis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RM_Estimate__c</fullName>
        <description>RM Estimate</description>
        <label>RM Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Provider__c</fullName>
        <description>Service Provider</description>
        <label>Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Services Used</description>
        <inlineHelpText>Services Used</inlineHelpText>
        <label>Services Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet_estimate__c</fullName>
        <label>Share of Wallet estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Need Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>